--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ http://www.templatemo.com/tm-516-known
                                   <!--<span><i class="fa fa-users"></i></span>-->
                                    <figcaption>
                                         <h3>Empowering educators for community transformation.</h3><br>
-                                        <p>The Collaborative and Creative Innovations Centre is an <strong>Educational Technonoloy</strong> enterprise providing resources and skills for <em>teachers</em> in order to improve learning outcomes in schools and related educational communities. COCRIC offers affordable, needs-specific and professional teacher training which leads to increased productivity as well as transform learning communities.The enterprise was started in March 2016 and is based in Yenagoa, Bayelsa State, Nigeria..</p>
+                                        <p>The Collaborative and Creative Innovations Centre is an <strong>Educational Technology</strong> enterprise providing resources and skills for <em>teachers</em> in order to improve learning outcomes in schools and related educational communities. COCRIC offers affordable, needs-specific and professional teacher training which leads to increased productivity as well as transform learning communities.The enterprise was started in March 2016 and is based in Yenagoa, Bayelsa State, Nigeria..</p>
                                    </figcaption>
                               </figure>
 
